# dummy_omp

./: LICENSE  README.md  compute.c  dummy.ml  dummy.opam  example.md  example.ml  jbuild
comparison/: sin.c
src/: jbuild
src/core/: compute_impl.h  compute_stub.c  dummy_compute.ml  dummy_core_types.ml
src/dense/: dummy_ndarray_generic.ml
