opam-version: "1.2"
maintainer: "Roger Stark (rho.ajax@gmail.com)"
authors: [ "Roger Stark (rho.ajax@gmail.com)" ]
license: "MIT"
homepage: "https://github.com/jzstark/owl"
dev-repo: "git+https://github.com/jzstark/owl.git"
bug-reports: "https://github.com/jzstark/owl/issues"

version: "dev"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: []
available: [ ocaml-version >= "4.06.0" ]
